# learn_ceres_ws

./: .gitignore
ch1_Non-linearLeastSquares/: CMakeLists.txt  ad_one_dim_multivariate.cpp  ad_three_dim_multivariate.cpp  ad_two_dim_multivariate.cpp  analytic_diff.cpp  main.cpp  main_g2o.cpp  numeric_diff.cpp  powerll.cpp  readme.md
ch2_curve_fitting/: CMakeLists.txt  curve_fitting.cpp  curve_fitting_g2o.cpp  readme.md  robust_curve_fitting.cpp
ch3_Bundle_Adjustment/: readme.md
ch4_pose_graph/: 2d_pose_graph.cpp  CMakeLists.txt  readme.md
ch4_pose_graph/include/: angle_manifold.h  normalize_angle.h  pose_graph_2d_error_term.h  read_g2o.h  types.h
ch4_pose_graph/script/: plot_result.py
ch5_pose_graph_g2o/: CMakeLists.txt  edge_se2.cpp  edge_se2_pointxy.cpp  parameter_se2_offset.cpp  readme.md  simulator.cpp  tutorial_slam2d.cpp  types_slam2d.cpp  vertex_point_xy.cpp  vertex_se2.cpp
ch5_pose_graph_g2o/include/: edge_se2.h  edge_se2_pointxy.h  g2o_slam2d_api.h  parameter_se2_offset.h  se2.h  simulator.h  types_slam2d.h  vertex_point_xy.h  vertex_se2.h
ch5_pose_graph_g2o/script/: compare.py  tutorial_after.g2o  tutorial_before.g2o
